deployment/local/1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-k3s
  namespace: default
  labels:
    project: reef-beat
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: demo-k3s
